# ragify

./: .gitignore  DEVELOPMENT_ROADMAP_README.md  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATION_README.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: ARCHITECTURE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_STATUS.md  README.md  api-reference.md  architecture.md  basic-usage.md  cache-management.md  confidence-bounds.md  configuration.md  conflict-resolution.md  context-fusion.md  data-sources.md  deployment.md  ensemble-methods.md  examples.md  installation.md  performance.md  scoring.md  storage-engine.md  troubleshooting.md  vector-databases.md
docs/use-cases/: chatbots.md
examples/: INDEX.md  README_DEMO.md  README_EXAMPLES.md  api_authentication_demo.py  api_database_integrations_demo.py  basic_usage.py  cache_management_demo.py  caching_and_performance_optimization.py  company_knowledge_base.py  comprehensive_test_suite.py  confidence_bounds_demo.py  conflict_detection_and_resolution.py  context_fusion_and_merging.py  data_privacy_and_anonymization.py  data_storage_and_retrieval.py  data_synchronization_and_updates.py  document_ingestion_and_processing.py  document_processing_demo.py  enhanced_confidence_intervals_demo.py  ensemble_scoring_and_confidence_intervals.py  external_data_integrations.py  final_demo.py  getting_started_with_ragify.py  ml_ensemble_training_demo.py  multi_database_deployment.py  multi_factor_scoring_demo.py  performance_optimization_demo.py  practical_realtime_demo.py  privacy_key_derivation_demo.py  privacy_management_demo.py  real_time_services_demo.py  real_world_demo.py  realtime_data_processing.py  realtime_data_streaming.py  realtime_sync_demo.py  relevance_scoring_and_ranking.py  requirements_demo.txt  research_assistant_application.py  security_encryption_and_access_control.py  storage_engine_demo.py  (+5 more)
examples/demo_documents/: sample.txt
examples/rag_chat_assistant/: README.md  rag_chat_assistant.py  requirements.txt  test_setup.py
models/: feature_scaler_random_forest.joblib  ml_model_random_forest.joblib  model_metadata_random_forest.json
scripts/: deploy.py  run_tests.py
src/ragify/: __init__.py  core.py  exceptions.py  models.py
src/ragify/engines/: __init__.py  fusion.py  scoring.py  storage.py  updates.py
src/ragify/sources/: __init__.py  api.py  base.py  database.py  document.py  realtime.py
src/ragify/storage/: __init__.py  cache.py  compliance.py  privacy.py  security.py  vector_db.py
tests/: __init__.py  conftest.py  run_tests.py  test_core.py  test_intelligent_fusion.py  test_privacy_key_derivation.py  test_vector_db.py  utils.py
